# Robust_Interact

./: .gitignore  README.md
Code/: .gitignore  README.md  Readme.md  Readme.txt
Code/2D/: CMakeLists.txt  main.cpp
Code/2D/Others/: data_utility.cpp  data_utility.h  used_function.cpp  user_mode.cpp  user_mode.h
Code/2D/ST2D/: ST2D.cpp  ST2D.h
Code/2D/input/: 2d.txt
Code/All_Top-k/: CMakeLists.txt  main.cpp  readme.txt
Code/All_Top-k/2DPI/: 2dPI.cpp  2dPI.h
Code/All_Top-k/HDPI/: HDPI.cpp
Code/All_Top-k/Others/: data_struct.h  pruning.cpp  used_function.h
Code/All_Top-k/RH/: alg_one.cpp
Code/All_Top-k/output/: hyperplane_data.txt  point.txt  top.txt
Code/ExistingAlg/: CMakeLists.txt  main.cpp  readme.txt
Code/ExistingAlg/Active_Ranking/: active_ranking.cpp  active_ranking.h
Code/ExistingAlg/Median_Hull/: medianhull.cpp  medianhull.h
Code/ExistingAlg/Others/: data_utility.cpp  data_utility.h  lp.cpp  lp.h  pruning.cpp  pruning.h  used_function.cpp  used_function.h
Code/ExistingAlg/Preference_Learning/: preferLearn.cpp  preferLearn.h
Code/ExistingAlg/Qhull/: frame.h  qhull_build.h
Code/ExistingAlg/UH/: maxUtility.cpp  maxUtility.h
Code/ExistingAlg/UtilityApprox/: UtilityApprox.cpp  UtilityApprox.h
Code/ExistingAlg/output/: ext_pt.txt  hyperplane_data.txt
Code/Experiments/: CMakeLists.txt  PointPrune.cpp  PointPrune.h  README.md  SamplePrune.cpp  SamplePrune.h  exp_stats.cpp  exp_stats.h  main.cpp
Code/Experiments/2D/: CMakeLists.txt  main.cpp
Code/Experiments/2DPI/: 2dPI.cpp  2dPI.h
Code/Experiments/Active_Ranking/: active_ranking.cpp  active_ranking.h
Code/Experiments/HDPI/: HDPI.cpp  HDPI.h  PointPrune.cpp  PointPrune.h  STMD.h  SamplePrune.cpp  partition_func.cpp
Code/Experiments/MD/: CMakeLists.txt  main.cpp
Code/Experiments/Median_Hull/: medianhull.cpp  medianhull.h
Code/Experiments/Others/: data_utility.cpp  frame.cpp  frame.h  operation.cpp  operation.h  pruning.h  qhull_build.h  rtree.cpp  rtree.h  used_function.cpp  used_function.h  user_mode.cpp  user_mode.h
Code/Experiments/Preference_Learning/: preferLearn.cpp  preferLearn.h
Code/Experiments/Qhull/: global.cpp  libqhull.cpp
Code/Experiments/RH/: alg_one.cpp  alg_one.h
Code/Experiments/ST2D/: ST2D.cpp  ST2D.h
Code/Experiments/UH/: maxUtility.cpp  maxUtility.h
Code/Experiments/UtilityApprox/: UtilityApprox.cpp  UtilityApprox.h
Code/Experiments/input/: 2d100k.txt  2d10k.txt  2d1k.txt  2d5K.txt  3d.txt  3d_anti.txt  4d.txt  4d100.txt  4d100k.txt  4d1k.txt  HTRU.txt  car.txt  diamond_all.txt  nba.txt
Code/Experiments/output/: ext_pt.txt  hyperplane_data.txt  point.txt  top.txt
Code/InteractiveTopk/: CMakeLists.txt  main.cpp  readme.txt
Code/InteractiveTopk/HDPI/: HDPI.cpp  HDPI.h
Code/InteractiveTopk/Others/: data_utility.h
Code/InteractiveTopk/RH/: alg_one.cpp
Code/InteractiveTopk/output/: ext_pt.txt  hyperplane_data.txt  point.txt
Code/PointPrune/: .gitignore  CMakeLists.txt  main.cpp
Code/PointPrune/HDPI/: HDPI.cpp  HDPI.h  PointPrune.cpp  PointPrune.h  STMD.cpp  SamplePrune.cpp  SamplePrune.h
Code/PointPrune/Others/: data_struct.h  data_utility.cpp  data_utility.h  pruning.cpp  read_write.cpp  used_function.cpp  used_function.h  user_mode.cpp  user_mode.h
Code/PointPrune/include/cartesian_geom/: cartesian_kernel.h
Code/PointPrune/input/: 4d.txt  car.txt
Code/PointPrune/output/: ext_pt.txt  hyperplane_data.txt  point.txt  top.txt
Code/RI_user_study/: .gitignore  CMakeLists.txt  HDPI.cpp  HDPI.h  README.md  RH.cpp  RH.h  RI_user_study.cpp  RI_user_study.h  active_ranking.cpp  active_ranking.h  lp.h  main.cpp  maxUtility.cpp  maxUtility.h  preferLearn.cpp  preferLearn.h  run.sh
Code/RI_user_study/Others/: pruning.cpp  pruning.h  used_function.cpp  used_function.h  user_mode.cpp  user_mode.h  user_study_func.cpp  user_study_func.h
Code/RI_user_study/RI/: PointPrune.cpp  PointPrune.h  STMD.cpp  STMD.h  SamplePrune.cpp  SamplePrune.h
Code/SpacePrune/: .gitignore  CMakeLists.txt  lp.h  main.cpp  test.cpp
Code/SpacePrune/Others/: data_struct.h  data_utility.cpp  data_utility.h  used_function.h  user_mode.cpp  user_mode.h
Code/SpacePrune/Qhull/: poly.cpp
Code/SpacePrune/RH/: alg_one.cpp
Code/SpacePrune/SpacePrune/: alg_spaceprune.cpp  alg_spaceprune.h
Code/SpacePrune/output/: ext_pt.txt  hyperplane_data.txt  top.txt
Code/Supplement_Code/All_Top-k/: CMakeLists.txt  main.cpp  readme.txt
Code/Supplement_Code/User_study/: CMakeLists.txt  HDPI.cpp  active_ranking.h  main.cpp  preferLearn.cpp  readme.txt  user_study.cpp
Code/Supplement_Code/User_study/Others/: data_utility.cpp  operation.h  pruning.cpp  read_write.cpp  used_function.cpp
Code/Supplement_Code/User_study/Qhull/: qhull_build.h
Code/Supplement_Code/User_study/output/: ext_pt.txt  hyperplane_data.txt  top.txt
Code/User_study/: CMakeLists.txt  HDPI.cpp  HDPI.h  Makefile  lp.cpp  maxUtility.cpp  maxUtility.h  preferLearn.h  readme.txt  user_study.cpp  user_study.h
Code/User_study(motivation)/: HDPI.cpp  HDPI.h  RH.cpp  RH.h  active_ranking.cpp  readme.txt
Code/Var_Experiments/: .gitignore  CMakeLists.txt  PointPrune.cpp  PointPrune.h  PointPrune_qtype.cpp  PointPrune_qtype.h  README.md  SamplePrune.cpp  SamplePrune.h  SamplePrune_qtype.cpp  SamplePrune_qtype.h  main.cpp  variant_func.cpp  variant_func.h
Code/Var_Experiments/Active_Ranking/: active_ranking.cpp  active_ranking.h
Code/Var_Experiments/HDPI/: HDPI.cpp  HDPI.h  partition_func.cpp  partition_func.h
Code/Var_Experiments/Others/: data_utility.cpp  data_utility.h  frame.cpp  frame.h  operation.cpp  operation.h  qhull_build.cpp  read_write.cpp  read_write.h  used_function.cpp  used_function.h  user_mode.cpp  user_mode.h
Code/Var_Experiments/Preference_Learning/: preferLearn.cpp  preferLearn.h
Code/Var_Experiments/Qhull/: io.cpp  poly.h  random.cpp
Code/Var_Experiments/RH/: alg_one.cpp  alg_one.h
Code/Var_Experiments/ST2D/: ST2D.cpp
Code/Var_Experiments/UH/: maxUtility.cpp  maxUtility.h
Code/Var_Experiments/UtilityApprox/: UtilityApprox.cpp
Code/Var_Experiments/input/: 4d10k.txt
(+53 files in other folders)
